# gateway

./: Cargo.toml  README.md  build.rs
proto/: auth.proto  product.proto
src/: error.rs  main.rs  middleware.rs  models.rs  routes.rs  services.rs
src/middleware/: jwt_validator.rs  metrics.rs
src/models/: auth_models.rs  order_models.rs  product_models.rs
src/routes/: auth_routes.rs  order_routes.rs  product_routes.rs
src/services/: auth_service.rs  order_service.rs  product_service.rs
