[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-service = "2.0.2"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.5"
tonic = "0.12.1"
prost = "0.13.1"
error-stack = "0.5.0"
log = "0.4.22"
thiserror = "1.0.63"
jsonwebtoken = "9.3.0"
futures = "0.3.30"


[build-dependencies]
tonic-build = "0.12.1"